<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Mercury-SSH
  ~ Copyright (C) 2017 Skarafaz
  ~
  ~ This file is part of Mercury-SSH.
  ~
  ~ Mercury-SSH is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Mercury-SSH is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Mercury-SSH.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Mercury-SSH</string>

    <string name="title_activity_help">Help</string>
    <string name="title_activity_log">Log</string>

    <string name="action_clear">Clear</string>
    <string name="action_export_public_key">Export public key</string>
    <string name="action_help">Help</string>
    <string name="action_log">Log</string>
    <string name="action_reload">Reload</string>
    <string name="action_send_public_key">Send public key</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="submit">Submit</string>

    <string name="command">Command</string>
    <string name="server">Server</string>

    <string name="cannot_create_config_dir">Cannot create\n%s</string>
    <string name="cannot_read_ext_storage">Cannot read external storage</string>
    <string name="cannot_write_ext_storage">Cannot write to external storage</string>
    <string name="command_sent">Command sent!</string>
    <string name="command_successful">Command executed successfully!</string>
    <string name="command_timeout">Command timed out</string>
    <string name="communication_error">Communication error</string>
    <string name="confirm_exec">Confirm execution?</string>
    <string name="connection_failed">Failed to connect to server, please see log for details</string>
    <string name="connection_init_error">An error occurred during connection initialization, please see log for details</string>
    <string name="connection_string_hint">user@host:port</string>
    <string name="connection_string_message">Type connection string for target server</string>
    <string name="download_failed">Download failed</string>
    <string name="download_failed_file">Download of %s could not be completed</string>
    <string name="download_succeeded">Download succeeded</string>
    <string name="download_succeeded_file">%s downloaded</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="downloading_starting">Start downloading %s</string>
    <string name="downloading_percent">%1$d%% Downloading %2$s (%3$s of %4$s)</string>
    <string name="empty_config_dir">No config files found in\n%s</string>
    <string name="empty_log">Log file is empty</string>
    <string name="execution_failed">Command execution failed, please see log for details</string>
    <string name="export_public_key_error">Cannot export public key, please see log for details</string>
    <string name="export_public_key_permission">Mercury-SSH requires STORAGE permission to export the public key to sdcard</string>
    <string name="export_public_key_success">Public key exported to\n%s</string>
    <string name="exporting_public_key">Exporting public key&#8230;</string>
    <string name="load_config_files_error">One or more config files did not pass the validity check, please see log for details</string>
    <string name="load_config_files_permission">Mercury-SSH requires STORAGE permission to read config files</string>
    <string name="no_commands">No entries defined\nfor this server</string>
    <string name="no_handler">No handler for this type of file.</string>
    <string name="password">Password</string>
    <string name="send_publick_key">Send public key</string>
    <string name="sending_command">Sending command&#8230;</string>
    <string name="settings">Settings</string>
    <string name="type_login_password">Login %s</string>
    <string name="type_sudo_password">Sudo password for %s</string>
    <string name="validation_missing">is missing</string>
    <string name="validation_invalid">is invalid</string>
    <string name="validation_file">Failed to validate [%s]:</string>
</resources>
