<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reload"
        android:title="@string/action_reload"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export_public_key"
        android:title="@string/action_export_public_key"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_send_public_key"
        android:title="@string/action_send_public_key"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_log"
        android:title="@string/action_log"
        app:showAsAction="collapseActionView" />
</menu>